--- a/README.adoc
+++ b/README.adoc
@@ -29,6 +29,8 @@ buildPlugin()
   execute the steps against in parallel
 * `jenkinsVersions`: (default: `[null]`) - a matrix of Jenkins baseline versions to build/test against in parallel (null means default,
   only available for Maven projects)
+* `allowEmptyTestResults` (default: `false`) - Do not fail the build if the test results are missing.
+   It may be used for components, which have no tests within the repo
 
 Usage:
 
