--- a/README.adoc
+++ b/README.adoc
@@ -68,7 +68,7 @@ if (infra.isTrusted()) {
 
 === runATH
 
-Runs the link:https://github.com/jenkinsci/acceptance-test-harness[Acceptance Test Harness] in a configurable way
+Runs the link:https://github.com/jenkinsci/acceptance-test-harness[Acceptance Test Harness] in a configurable way.
 
 The configuration is divided into two parts, one related to the step itself and another related to how the ATH is run.
 To configure the step just use the step's parameters described below, to configure the ATH runs a metadata file (in YAML format)
@@ -78,12 +78,16 @@ will do nothing at all.*
 The list of step's params and the related default values are:
 
 
-* `athUrl`: The URL to get the ATH sources. It can point to a local path (by using the file:// protocol) or a github destination. Defaults to https://github.com/jenkinsci/acceptance-test-harness.git. *Can be overridden from the metadata file*
-* `athRevision`: The ATH revision to use, can be a branch or tag name or a commit id. Defaults to branch master. *Can be overridden from the metadata file*
-* `metadataFile`: A String indicating the file path (relative to the where this step is executed) to use as metadata file for the build, more details about the metadata file are provided belows. *Defaults to `essentials.yml` at the location where this step is invoked*
-* `jenkins`: URI to the jenkins.war, Jenkins version or one of "latest", "latest-rc", "lts" and "lts-rc". Defaults to "latest". For local war files use the file:// protocol in the URI. *Can be overriden from the metadata file*
+`athUrl`::
+ The URL to get the ATH sources. It can point to a local path (by using the file:// protocol) or a github destination. Defaults to https://github.com/jenkinsci/acceptance-test-harness.git. *Can be overridden from the metadata file*
+`athRevision`::
+The ATH revision to use, can be a branch or tag name or a commit id. Defaults to branch master. *Can be overridden from the metadata file*
+`metadataFile`::
+ A String indicating the file path (relative to where this step is executed) to use as metadata file for the build, more details about the metadata file are provided belows. *Defaults to `essentials.yml` at the location where this step is invoked*
+`jenkins`::
+ URI to the jenkins.war, Jenkins version or one of "latest", "latest-rc", "lts" and "lts-rc". Defaults to "latest". For local war files use the file:// protocol in the URI. *Can be overriden from the metadata file*
 
-.Jenkinsfile
+.Step call example
 [source,groovy]
 ----
 runATH(metadataFile:"metadata.yml", athRevision: "master", athUrl:"https://github.com/jenkinsci/acceptance-test-harness.git", jenkins: "2.110")
@@ -94,7 +98,7 @@ To make it usable in PR builders this step allows users to run the ATH using cus
 plugins you want to use in the ATH run. By default you need to stash them with the name `localPlugins` the step will unstash them when appropriate and use the ATH`s `LOCAL_JARS` property to run the ATH. You can stash any number of plugins, all of
 them will be used. You can also stash under other name by setting the env variable `RUN_ATH_LOCAL_PLUGINS_STASH_NAME`
 
-.Jenkinsfile
+.Using development versions of plugins
 [source,groovy]
 ----
 node("linux") {
@@ -116,7 +120,7 @@ node("linux") {
     }
 ----
 
-.Jenkinsfile
+.Using custom stash name
 [source,groovy]
 ----
     node("linux") {
@@ -165,16 +169,24 @@ ath:
 
 Where:
 
-
-    * `athUrl`: (Optional) The URL to get the ATH sources. It can point to a local path or a github destination. If specified it will override the parameter in the runATH step
-    * `athRevision`: (Optional) The ATH revision to use can be a branch or tag name or a commit id. If specified it will override the parameter in the runATH step
-    * `jenkins`: (Optional) URI to the jenkins.war file, Jenkins version or one of "latest", "latest-rc", "lts" and "lts-rc". If specified it will override the parameter in the runATH step
-    * `failFast`: If the run has to fail fast or not. Defaults to false if not specified
-    * `rerunFailingTestsCount`: The number of runs per failing test (a la maven). Defaults to zero</li>
-    * `useLocalSnapshots`: If the ATH should use local versions of the plugins. Defaults to true. *Note that if true the runATH expects the local plugins to be stashed, setting this to true without the stash will make the step fail*
-    * `browsers`: The list of browsers to use when running ATH Defaults to firefox. *Note that currently only firefox browser is supported, any other will be ignored*
-    * `tests`: The list of tests to run for the component that calls the step. If no particular set of tests or categories is defined the SmokeTest Category of the ATH will be run
-    * `categories`: The list of Categories to run. Defaults to nothing
+`athUrl`::
+ (Optional) The URL to get the ATH sources. It can point to a local path or a github destination. If specified it will override the parameter in the runATH step
+`athRevision`::
+ (Optional) The ATH revision to use can be a branch or tag name or a commit id. If specified it will override the parameter in the runATH step
+`jenkins`::
+ (Optional) URI to the jenkins.war file, Jenkins version or one of "latest", "latest-rc", "lts" and "lts-rc". If specified it will override the parameter in the runATH step
+`failFast`::
+ If the run has to fail fast or not. Defaults to false if not specified
+`rerunFailingTestsCount`::
+ The number of runs per failing test (a la maven). Defaults to zero
+`useLocalSnapshots`::
+ If the ATH should use local versions of the plugins. Defaults to true. *Note that if true the runATH expects the local plugins to be stashed, setting this to true without the stash will make the step fail*
+`browsers`::
+ The list of browsers to use when running ATH Defaults to firefox. *Note that currently only firefox browser is supported, any other will be ignored*
+`tests`::
+ The list of tests to run for the component that calls the step. If no particular set of tests or categories is defined the SmokeTest Category of the ATH will be run
+`categories`::
+ The list of Categories to run. Defaults to nothing
 
 In case you want to use the defaults for all properties you can use
 
