--- a/README.adoc
+++ b/README.adoc
@@ -45,6 +45,7 @@ buildPlugin()
 ** `pattern`: (default: `'**/target/checkstyle-result.xml'`) the file pattern for the report.
 ** `unstableTotalAll`: (default: `null`) the violations threshold for when to mark the build as unstable, see the `checkstyle` step for additional details.
 ** `unstableNewAll`:  (default: `null`) the new violations threshold for when to mark the build as unstable, see the `checkstyle` step for additional details.
+* `timeout`: (default: `60`) - the number of minutes for build timeout
 
 NOTE: `findbugs`  and `checkstyle` are only run/archived on the first platform/jdkVersion,jenkinsVersion combination. So in the example below it will run for `linux`/`jdk7` but not on `jdk8`.
 
