--- a/README.adoc
+++ b/README.adoc
@@ -259,7 +259,7 @@ The PCT revision to use in case that pctUrl points to a github destination, can 
 `dockerOptions`::
  List of extra options to be passed to PCT containers ( e.g. `maven-repo:/root/.m2`)
 `useJDK11`::
- Boolean to specified if the test should be run with JDK11.
+ The version of the JDK to use to run the tests. Should be `8` or `11`. Defaults to `8`.
 
 .Step call example
 [source,groovy]
