--- a/README.adoc
+++ b/README.adoc
@@ -128,7 +128,7 @@ The docker image used for the environment where to run the ATH. Defaults to "jen
 `jenkins`::
  URI to the jenkins.war, Jenkins version or one of "latest", "latest-rc", "lts" and "lts-rc". Defaults to "latest". For local war files use the file:// protocol in the URI. *Can be overriden from the metadata file*
  `jdks`::
- Java versions to use when running ATH. Defaults to 8. Only 8, 10 and 11 are supported. *Can be overridden from the metadata file*
+ Java versions to use when running ATH. Defaults to 8. Only 8 and 11 are supported. *Can be overridden from the metadata file*
 `configFile`::
  (Optional) Relative (to the workspace) path of a groovy script to customize the ATH behaviour
 .Step call example
@@ -212,7 +212,6 @@ ath:
     - Category2
   jdks:
     - 8
-    - 10
     - 11
 ----
 
@@ -239,7 +238,7 @@ Where:
 `categories`::
  The list of Categories to run. Defaults to nothing
 `jdks`::
- The list of jdks to use when running ATH. Defaults to 8. *Note that currently only 8, 10 and 11 are supported, any other will be ignored*
+ The list of jdks to use when running ATH. Defaults to 8. *Note that currently only 8 and 11 are supported, any other will be ignored*
 
 In case you want to use the defaults for all properties you can use
 
