--- a/README.adoc
+++ b/README.adoc
@@ -9,8 +9,7 @@ Check link:https://github.com/jenkins-infra/documentation/blob/master/ci.adoc[th
 
 === buildPlugin
 
-| WARNING: Gradle support in `buildPlugin()` is deprecated and will be eventually removed. Please use `buildPluginWithGradle()` |
-| --- |
+WARNING: Gradle support in `buildPlugin()` is deprecated and will be eventually removed. Please use `buildPluginWithGradle()`
 
 Applies the appropriate defaults for building a Maven-based plugin project on
 Linux and Windows.
@@ -85,6 +84,20 @@ Usage:
 buildPlugin(platforms: ['linux'], jdkVersions: [7, 8], findbugs: [archive: true, unstableTotalAll: '0'], checkstyle: [run: true, archive: true])
 ----
 
+=== buildPluginWithGradle()
+
+Builds a Jenkins plugin using Gradle.
+The implementation follows the standard build/test/archive pattern. 
+The method targets compatibility with link:https://github.com/jenkinsci/gradle-jpi-plugin[Gradle JPI Plugin],
+and it may not work for other use-cases.
+
+The interface is similar to `buildPlugin()`, but some features are not supported.
+Examples of not supported features:
+
+* Deployment of incremental versions (link:https://github.com/jenkinsci/jep/tree/master/jep/305[JEP-305])
+* Publishing of static analysis and coverage reports (Checkstyle, SpotBugs, JaCoCo)
+* Configuring `jenkinsVersion` and `javaLevel` for the build flow
+
 === infra.isTrusted()
 
 Determine whether the Pipeline is executing in an internal "trusted" Jenkins
@@ -120,20 +133,6 @@ see the step doc for more documentation about he allowed versions
 ----
 infra.stashJenkinsWar("2.110")
 ----
-
-=== buildPluginWithGradle()
-
-Builds a Jenkins plugin using Gradle.
-The implementation follows the standard build/test/archive pattern. 
-The method targets compatibility with [Gradle JPI Plugin](https://github.com/jenkinsci/gradle-jpi-plugin),
-and it may not work for other use-cases.
-
-The interface is similar to `buildPlugin()`, but some features are not supported.
-Examples of not supported features:
-
-* [JEP-305](https://github.com/jenkinsci/jep/tree/master/jep/305)
-* Publishing of static analysis and coverage reports (Checkstyle, SpotBugs, JaCoCo)
-* Configuring `jenkinsVersion` and `javaLevel` for the build flow
 
 === runATH
 
