Add optional recording of code coverage.
If `withCoverage` is enabled then maven goals to run JaCoCo plugin are added. Additionally, the created report will be rendered using the Jenkins Code Coverage API plugin.

--- a/README.adoc
+++ b/README.adoc
@@ -61,7 +61,10 @@ buildPlugin(/*...*/, configurations: buildPlugin.recommendedConfigurations())
 
 * `tests`: (default: `null`) - a map of parameters to run tests during the build
 ** `skip` - If `true`, skip all the tests by setting the `-skipTests` profile.
-  It will also skip FindBugs in modern Plugin POMs.
+  It will also skip FindBugs and SpotBugs in modern Plugin POMs.
+** `withCoverage` - If `true`, record code coverage with
+https://www.eclemma.org/jacoco/trunk/doc/maven.html[Maven JaCoCo plugin] and
+ https://plugins.jenkins.io/code-coverage-api/[Jenkins Code Coverage API plugin].
 * `spotbugs`, `checkstyle`, `pmd`, `cpd`: (default: `null`) - a map of parameters to archive SpotBugs, CheckStyle, PMD, or CPD warnings, respectively (only available for Maven projects).
 These values can replace or amend the default configuration for the `recordIssues` step of the https://github.com/jenkinsci/warnings-ng-plugin[Warnings NG Plugin].
 See https://github.com/jenkinsci/warnings-ng-plugin/blob/master/doc/Documentation.md#configuration[Warnings NG Plugin documentation]
