Do not alter maven commandline.

--- a/README.adoc
+++ b/README.adoc
@@ -59,12 +59,10 @@ and hence your CI may break if the new recommended configuration is not compatib
 buildPlugin(/*...*/, configurations: buildPlugin.recommendedConfigurations())
 ----
 
-* `tests`: (default: `null`) - a map of parameters to run tests during the build
+* `tests`: (default: `null`) - a map of parameters to run tests during the build. The test results and the JaCoCo code
+coverage results are recorded after the build with the corresponding Jenkins plugins.
 ** `skip` - If `true`, skip all the tests by setting the `-skipTests` profile.
-  It will also skip FindBugs and SpotBugs in modern Plugin POMs.
-** `withCoverage` - If `true`, record code coverage with
-https://www.eclemma.org/jacoco/trunk/doc/maven.html[Maven JaCoCo plugin] and
- https://plugins.jenkins.io/code-coverage-api/[Jenkins Code Coverage API plugin].
+  It will also skip FindBugs in modern Plugin POMs.
 * `spotbugs`, `checkstyle`, `pmd`, `cpd`: (default: `null`) - a map of parameters to archive SpotBugs, CheckStyle, PMD, or CPD warnings, respectively (only available for Maven projects).
 These values can replace or amend the default configuration for the `recordIssues` step of the https://github.com/jenkinsci/warnings-ng-plugin[Warnings NG Plugin].
 See https://github.com/jenkinsci/warnings-ng-plugin/blob/master/doc/Documentation.md#configuration[Warnings NG Plugin documentation]
