Add instruction on how to test a pull request change (#718)
* Add instruction on how to test a pull request change

* s/to/at/

* Better section title phrasing

Co-authored-by: Mark Waite <mark.earl.waite@gmail.com>

* better phrasing

Co-authored-by: Mark Waite <mark.earl.waite@gmail.com>

---------

Co-authored-by: Mark Waite <mark.earl.waite@gmail.com>

--- a/README.adoc
+++ b/README.adoc
@@ -208,4 +208,9 @@ buildDockerImage_k8s('plugins-site-api')
 * (Open)JDK v8
 * Maven 3.6.x
 
-===
+=== Testing a pull request
+
+By adding `@Library('pipeline-library@pull/<your-pr-number>/head') _` at the top of a Jenkinsfile from a repository built on one of the *.ci.jenkins.io instances, you can test your pipeline library pull request on ci.jenkins.io.
+
+A repository is dedicated for these kind of tests: https://github.com/jenkinsci/jenkins-infra-test-plugin/
+
